# python-analytics-accelerator

./: .gitignore  config.py  dashboard.py  dev-requirements.txt  eda.ipynb  index.html  justfile  metrics.py  pres.qmd  pyproject.toml  readme.md  search.json
src/python_analytics_accelerator/: catalog.py  cli.py  config.py  metrics.py  plots.py  utils.py
src/python_analytics_accelerator/dag/: __init__.py  config.py  jobs.py  resources.py
src/python_analytics_accelerator/dag/assets/: __init__.py  bronze.py  gold.py  silver.py
src/python_analytics_accelerator/etl/: extract.py  load.py  run.py  transform.py
src/python_analytics_accelerator/ingest/: __init__.py
testing/: config.py
website/: _quarto.yml  index.qmd
website/_output/: index.html  search.json
