[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "python-analytics-accelerator"
version = "0.3.0"
authors = [{ name = "Cody", email = "cody@dkdc.dev" }]
description = "Python analytics solution accelerator using composable data systems"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # secret management
    'python-dotenv',
    # http
    'httpx',
    'requests',
    # cli
    'typer',
    # cloud
    'gcsfs',
    # data
    'ibis-framework[duckdb,polars,clickhouse,deltalake]',
    # visualization
    'plotly',
    'great-tables',
    # dashboards and apps
    'shiny>=1.0.0',
    'shinywidgets>=0.3.3',
    'shinyswatch>=0.7.0',
]

[project.urls]
"Homepage" = "https://github.com/lostmygithubaccount/python-analytics-accelerator"
"Bug Tracker" = "https://github.com/lostmygithubaccount/python-analytics-accelerator/issues"

[project.scripts]
acc = "python_analytics_accelerator.cli:app"

[tool.ruff]
extend-include = ["*.ipynb"]
